--- a/composer.json
+++ b/composer.json
@@ -7,13 +7,11 @@
     "require": {
         "php": "^8.1",
         "guzzlehttp/guzzle": "^7.2",
-        "laravel/cashier": "^14.12",
         "laravel/framework": "^10.8",
         "laravel/sanctum": "^3.2",
         "laravel/tinker": "^2.8",
         "laravel/ui": "^4.2",
-        "mollie/laravel-mollie": "^2.23",
-        "stripe/stripe-php": "^10.13"
+        "mollie/laravel-mollie": "^2.23"
     },
     "require-dev": {
         "fakerphp/faker": "^1.9.1",
