--- a/composer.json
+++ b/composer.json
@@ -6,13 +6,15 @@
     "license": "MIT",
     "require": {
         "php": "^8.1",
+        "drewm/mailchimp-api": "^2.5",
         "guzzlehttp/guzzle": "^7.2",
         "laravel/framework": "^10.8",
         "laravel/sanctum": "^3.2",
         "laravel/tinker": "^2.8",
         "laravel/ui": "^4.2",
         "livewire/livewire": "^2.12",
-        "mollie/laravel-mollie": "^2.23"
+        "mollie/laravel-mollie": "^2.23",
+        "realrashid/sweet-alert": "^7.0"
     },
     "require-dev": {
         "fakerphp/faker": "^1.9.1",
