--- a/composer.json
+++ b/composer.json
@@ -8,8 +8,10 @@
         "php": "^8.1",
         "drewm/mailchimp-api": "^2.5",
         "guzzlehttp/guzzle": "^7.2",
+        "jantinnerezo/livewire-alert": "^2.2",
         "laravel/framework": "^10.8",
         "laravel/sanctum": "^3.2",
+        "laravel/socialite": "^5.6",
         "laravel/tinker": "^2.8",
         "laravel/ui": "^4.2",
         "livewire/livewire": "^2.12",
